environments/uat/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx
  namespace: openedx-uat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "lms-uat.dlp.engineplatform.co.uk"
    - "cms-uat.dlp.engineplatform.co.uk"
    - "apps-uat.dlp.engineplatform.co.uk"
    secretName: wild-dlp.engineplatform.co.uk-tls
  rules:
  - host: lms-uat.dlp.engineplatform.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: cms-uat.dlp.engineplatform.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
  - host: apps-uat.dlp.engineplatform.co.uk
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mfe
              port:
                number: 8002
